--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,13 +8,13 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
+} */
 
 body {
   color: rgb(var(--foreground-rgb));
@@ -30,4 +30,15 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.text-gradient {
+    background: linear-gradient(-25deg, rgb(17, 31, 36), rgb(148, 153, 156));
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.loading {
+  @apply animate-pulse;
 }
